--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -43,7 +43,7 @@
   <nav class="navbar-container">
     <div class="navbar">
       <!-- Logo -->
-      <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
+      <a href="index.html"><img src="img/core-img/logo.png" alt="logo" class="logo" /></a>
 
       <!-- Navigation Links -->
       <ul class="navbar-nav" id="navbarNav">
@@ -157,7 +157,7 @@
   <!------------------------------------------------------------------------ Start of Sections ------------------------------------------------------------------------>
   <!-- Cover Header -->
   <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-about"
-    style="background-image: url(img/bg-img/hero-bg-small.png); height: 68vh;">
+    style="background-image: url(img/bg-img/hero-bg-small.png); height: 71vh;">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
@@ -494,23 +494,27 @@
 
   </section>
 
-  <footer class="footer-area">
-    <div class="container">
-      <div class="footer-content d-flex flex-column align-items-center text-center">
-        <!-- Social Links -->
-        <div class="social-info">
-          <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
-          <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
-          <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
-          <a href="https://www.instagram.com/nrfzlkf/"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
-        </div>
-        <!-- Copywrite Text -->
-        <div class="copywrite-text">
-          <p>&copy;
-            <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli
-          </p>
-        </div>
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-social">
+        <a href="https://github.com/nurafianZulkifli" class="social-link">
+          <i class="fa-brands fa-github" aria-hidden="true"></i>
+        </a>
+        <a href="https://twitter.com/nrfzlkf_" class="social-link">
+          <i class="fa-brands fa-x-twitter" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.facebook.com/Nrfnzlkf/" class="social-link">
+          <i class="fa-brands fa-facebook" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.instagram.com/nrfzlkf/" class="social-link">
+          <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+        </a>
       </div>
+    </div>
+
+    <div class="footer-copy">
+      © 2025 Nurafian Zulkifli
     </div>
   </footer>
 
