--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
 
     <div class="pw-portfolio-area-featured clearfix" id="featured">
-        <div class="container-fluid">
+        <div class="container-xxl container-fluid">
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeIn" data-wow-delay="100ms">
