--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -48,13 +48,13 @@
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
                     <a href="../index.html" class="nav-link">
-                        <i class="fa-solid fa-regular fa-house"></i>
+                        <i class="fa-solid fa-house"></i>
                         <span>Home</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="../about.html" class="nav-link">
-                        <i class="fa-solid fa-regular fa-circle-user"></i>
+                        <i class="fa-solid fa-circle-user"></i>
                         <span>About</span>
                     </a>
                 </li>
@@ -76,11 +76,9 @@
                         <span>Blog</span>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-item">
-                        <button class="wbnrfz_btn_theme" id="dark-mode-toggle-desktop" title="Toggle Dark/Light Mode!">
-                            <i class="fa-solid fa-moon-stars" id="theme-icon-desktop"></i>
-                        </button>
+                <li class="nav-item-toggle">
+                    <a href="#" class="nav-link-toggle" id="dark-mode-toggle-desktop" title="Toggle Dark/Light Mode!">
+                        <i class="fa-solid fa-moon-stars" id="theme-icon-desktop"></i>
                     </a>
                 </li>
             </ul>
