--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -49,13 +49,13 @@
       <ul class="navbar-nav" id="navbarNav">
         <li class="nav-item">
           <a href="index.html" class="nav-link">
-            <i class="fa-solid fa-regular fa-house"></i>
+            <i class="fa-solid fa-house"></i>
             <span>Home</span>
           </a>
         </li>
         <li class="nav-item">
           <a href="about.html" class="nav-link">
-            <i class="fa-solid fa-regular fa-circle-user"></i>
+            <i class="fa-solid fa-circle-user"></i>
             <span>About</span>
           </a>
         </li>
@@ -77,11 +77,9 @@
             <span>Blog</span>
           </a>
         </li>
-        <li class="nav-item">
-          <a href="#" class="nav-item">
-            <button class="wbnrfz_btn_theme" id="dark-mode-toggle-desktop" title="Toggle Dark/Light Mode!">
-              <i class="fa-solid fa-moon-stars" id="theme-icon-desktop"></i>
-            </button>
+        <li class="nav-item-toggle">
+          <a href="#" class="nav-link-toggle" id="dark-mode-toggle-desktop" title="Toggle Dark/Light Mode!">
+            <i class="fa-solid fa-moon-stars" id="theme-icon-desktop"></i>
           </a>
         </li>
       </ul>
@@ -522,6 +520,8 @@
     data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
     data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
     </script>
+
+  <script src="js/navtabs.js"></script>
 
   <script src="js/theme-subPages.js"></script>
 
