--- a/blog.html
+++ b/blog.html
@@ -57,7 +57,7 @@
                 <li class="nav-item">
                     <a href="works-by-nrfz.html" class="nav-link">
                         <i class="fa-solid fa-pen-paintbrush"></i>
-                        <span>Works by NRFZ</span>
+                        <span>Works By NRFZ</span>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -127,7 +127,7 @@
             <li class="mobile-menu-item">
                 <a href="works-by-nrfz.html" class="mobile-menu-link">
                     <i class="fa-solid fa-pen-paintbrush"></i>
-                    <span>Works by NRFZ</span>
+                    <span>Works By NRFZ</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
@@ -229,7 +229,7 @@
     </section>
 
     <!-- Section Contents -->
-    <section class="ftco-section-blog" style="padding-top: 4em; padding-bottom: 3em;">
+    <section class="about-me-summ clearfix">
         <div class="container-xxl">
             <div class="row">
                 <div class="col-12">
