--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -61,7 +61,7 @@
                 <li class="nav-item">
                     <a href="../works-by-nrfz.html" class="nav-link">
                         <i class="fa-solid fa-pen-paintbrush"></i>
-                        <span>Works by NRFZ</span>
+                        <span>Works By NRFZ</span>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -133,7 +133,7 @@
             <li class="mobile-menu-item">
                 <a href="../works-by-nrfz.html" class="mobile-menu-link">
                     <i class="fa-solid fa-pen-paintbrush"></i>
-                    <span>Works by NRFZ</span>
+                    <span>Works By NRFZ</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
