--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -62,7 +62,7 @@
         <li class="nav-item">
           <a href="#" class="nav-link active">
             <i class="fa-solid fa-pen-paintbrush"></i>
-            <span>Works by NRFZ</span>
+            <span>Works By NRFZ</span>
           </a>
         </li>
         <li class="nav-item">
@@ -134,7 +134,7 @@
       <li class="mobile-menu-item">
         <a href="#" class="mobile-menu-link active">
           <i class="fa-solid fa-pen-paintbrush"></i>
-          <span>Works by NRFZ</span>
+          <span>Works By NRFZ</span>
         </a>
       </li>
       <li class="mobile-menu-item">
@@ -178,7 +178,7 @@
                   </a>
                 </li>
                 <li class="breadcrumb-item">
-                  <a href="#">EICW</a>
+                  <a href="#">Works By NRFZ</a>
                 </li>
               </ol>
             </nav>
