XXXX-XX Feature Update for Version Next (6.0.0)

--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -161,8 +161,7 @@
     <!------------------------------------------------------------------------ Start of Sections ------------------------------------------------------------------------>
 
     <!-- Cover Header -->
-    <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-img"
-        style="background-image: url(img/cover-light.png); height: 68vh;">
+    <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-img">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
