--- a/about.html
+++ b/about.html
@@ -151,8 +151,7 @@
     <!------------------------------------------------------------------------ Start of Sections ------------------------------------------------------------------------>
 
     <!-- Cover Header -->
-    <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-about"
-        style="background-image: url(img/bg-img/hero-bg-small.png); height: 72vh;">
+    <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-about">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
