--- a/about.html
+++ b/about.html
@@ -169,7 +169,7 @@
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item">
-                                    <a href="../index.html">
+                                    <a href="index.html">
                                         <i class="fa-solid fa-house"></i>
                                     </a>
                                 </li>
