--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -178,7 +178,7 @@
                   </a>
                 </li>
                 <li class="breadcrumb-item">
-                  <a href="#">Works By NRFZ</a>
+                  <a href="../works-by-nrfz.html">Works By NRFZ</a>
                 </li>
                 <!-- <li class="breadcrumb-item active" aria-current="page">
                                     EICW
@@ -202,7 +202,7 @@
 
           <ul>
             <li>
-              <a href="#summary"><i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp; View Website</a>
+              <a href="https://nurafianzulkifli.github.io/train-delays-checker/"><i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp; View Website</a>
             </li>
           </ul>
 
