XXXX-XX Feature Update for Version Next (6.0.0)

--- a/index.html
+++ b/index.html
@@ -154,6 +154,13 @@
 
     <!-- ============================================= Hero Section ============================================= -->
     <section id="hero" class="d-flex flex-column justify-content-center">
+
+            <!-- Bouncing Down Arrow -->
+    <div class="bouncing-arrow-container">
+        <a href="#featured" class="bouncing-arrow-link" aria-label="Scroll Down">
+            <i class="fa-solid fa-angle-down bouncing-arrow"></i>
+        </a>
+    </div>
         <!-- <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
