XXXX-XX Feature Update for Version Next (6.0.0)

--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -43,7 +43,7 @@
   <nav class="navbar-container">
     <div class="navbar">
       <!-- Logo -->
-      <a href="index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
+      <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
 
       <!-- Navigation Links -->
       <ul class="navbar-nav" id="navbarNav">
@@ -118,7 +118,7 @@
 
     <ul class="mobile-menu-nav">
       <li class="mobile-menu-item">
-        <a href="index.html" class="mobile-menu-link">
+        <a href="../index.html" class="mobile-menu-link">
           <i class="fa-solid fa-regular fa-house"></i>
           <span>Home</span>
         </a>
@@ -130,19 +130,19 @@
         </a>
       </li>
       <li class="mobile-menu-item">
-        <a href="works-by-nrfz.html" class="mobile-menu-link active">
+        <a href="../works-by-nrfz.html" class="mobile-menu-link active">
           <i class="fa-solid fa-pen-paintbrush"></i>
           <span>Works By NRFZ</span>
         </a>
       </li>
       <li class="mobile-menu-item">
-        <a href="eicw/eicw.html" class="mobile-menu-link">
+        <a href="../eicw/eicw.html" class="mobile-menu-link">
           <i class="fa-solid fa-map-location"></i>
           <span>EICW</span>
         </a>
       </li>
       <li class="mobile-menu-item">
-        <a href="blog.html" class="mobile-menu-link">
+        <a href="../blog.html" class="mobile-menu-link">
           <i class="fa-solid fa-comment"></i>
           <span>Blog</span>
         </a>
@@ -155,13 +155,14 @@
   <!------------------------------------------------------------------------ Start of Sections ------------------------------------------------------------------------>
 
   <!-- Cover Header -->
-  <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-tdc">
-    <div class="container h-100">
-      <div class="row h-100 align-items-center">
-        <div class="col-12">
-        </div>
+  <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-tdc"
+    style="background-image: url(https://i.imgur.com/dRoqS9F.png); height: 75vh;"></section>
+  <div class="container h-100">
+    <div class="row h-100 align-items-center">
+      <div class="col-12">
       </div>
     </div>
+  </div>
   </section>
 
   <!-- Title/Breadcrumbs -->
@@ -202,7 +203,8 @@
 
           <ul>
             <li>
-              <a href="https://nurafianzulkifli.github.io/train-delays-checker/"><i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp; View Website</a>
+              <a href="https://nurafianzulkifli.github.io/train-delays-checker/"><i
+                  class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp; View Website</a>
             </li>
           </ul>
 
@@ -230,6 +232,7 @@
             <!-- Summary -->
             <div class="container container-xxl">
               <div class="row">
+
                 <div class="col-md-6 col-lg-4 box-indiv">
                   <div class="port-summary port-cat text-center mb-80 wow fadeIn" data-wow-delay="100ms">
                     <div class="summ-icon">
@@ -311,29 +314,29 @@
     </div>
   </section>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="footer-content">
-            <div class="footer-social">
-                <a href="https://github.com/nurafianZulkifli" class="social-link">
-                    <i class="fa-brands fa-github" aria-hidden="true"></i>
-                </a>
-                <a href="https://twitter.com/nrfzlkf_" class="social-link">
-                    <i class="fa-brands fa-x-twitter" aria-hidden="true"></i>
-                </a>
-                <a href="https://www.facebook.com/Nrfnzlkf/" class="social-link">
-                    <i class="fa-brands fa-facebook" aria-hidden="true"></i>
-                </a>
-                <a href="https://www.instagram.com/nrfzlkf/" class="social-link">
-                    <i class="fa-brands fa-instagram" aria-hidden="true"></i>
-                </a>
-            </div>
-        </div>
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-social">
+        <a href="https://github.com/nurafianZulkifli" class="social-link">
+          <i class="fa-brands fa-github" aria-hidden="true"></i>
+        </a>
+        <a href="https://twitter.com/nrfzlkf_" class="social-link">
+          <i class="fa-brands fa-x-twitter" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.facebook.com/Nrfnzlkf/" class="social-link">
+          <i class="fa-brands fa-facebook" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.instagram.com/nrfzlkf/" class="social-link">
+          <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+        </a>
+      </div>
+    </div>
 
-        <div class="footer-copy">
-            © 2025 Nurafian Zulkifli
-        </div>
-    </footer>
+    <div class="footer-copy">
+      © 2025 Nurafian Zulkifli
+    </div>
+  </footer>
 
   <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
     data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
@@ -368,7 +371,6 @@
 
   <script src="../js/dstabs.js"></script>
 
-  <!--  <script src="../js/preloader.js"></script> -->
 
   <!-- Script for Indiv Page - Modes -->
   <script>
