--- a/index.html
+++ b/index.html
@@ -155,16 +155,16 @@
     <!-- ============================================= Hero Section ============================================= -->
     <section id="hero" class="d-flex flex-column justify-content-center">
 
-            <!-- Bouncing Down Arrow -->
-    <div class="bouncing-arrow-container">
+        <!-- Bouncing Down Arrow -->
+        <div class="bouncing-arrow-container">
         <a href="#featured" class="bouncing-arrow-link" aria-label="Scroll Down">
             <i class="fa-solid fa-angle-down bouncing-arrow"></i>
         </a>
     </div>
         <!-- <div class="container h-100">
-            <div class="row h-100 align-items-center">
-                <div class="col-12">
-                    <div class="breadcrumb-content text-center">
+            <div class="row h-100 align-items-center justify-content-center">
+                <div class="col-12 col-md-8">
+                    <div class="breadcrumb-content text-center wow fadeIn" data-wow-delay="100ms">
                         <img class="profile-pic wow fadeIn" data-wow-delay="100ms" src="img/bg-img/about.png"
                             alt="profile-pic">
                         <div class="profile-det wow fadeIn" data-wow-delay="200ms">
