--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -188,7 +188,7 @@
                 </div>
                 <div style="position: relative; max-width: 400px; margin-top: 5px;">
                   <i class="fa-solid fa-search"
-                    style="position: absolute; left: 12px; top: 50%; transform: translateY(-50%); color: #6c757d; z-index: 1;"></i>
+                    style="position: absolute; left: 12px; top: 50%; transform: translateY(-50%); color: #cccccc; z-index: 1;"></i>
                   <input type="text" id="portfolio-search" class="form-control" placeholder=" Search for a project"
                     style="padding-left: 35px; width: 100%;">
                 </div>
